# rustbridge

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  configuration.md  deployment.md  examples.md  getting-started.md  modbus-guide.md  mqtt-integration.md  prometheus-metrics.md  troubleshooting.md
src/: bridge.rs  config.rs  lib.rs  main.rs
src/api/: auth.rs  mod.rs
src/metrics/: mod.rs
src/modbus/: client.rs  mod.rs  reader.rs
src/mqtt/: mod.rs
tests/: api_tests.rs
