[package]
name = "rustbridge"
version = "0.2.0"
edition = "2021"
authors = ["Mustafa Sarac <mrsarac@gmail.com>"]
description = "Industrial Protocol Bridge - Modbus TCP/RTU to JSON/MQTT Gateway"
license = "MIT"
repository = "https://github.com/neurabytelabs/rustbridge"
keywords = ["modbus", "mqtt", "industrial", "iot", "gateway", "industry-4.0"]
categories = ["network-programming", "embedded", "hardware-support"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Modbus protocol
tokio-modbus = "0.14"

# Serial port for RTU
tokio-serial = "5.4"

# MQTT client
rumqttc = "0.24"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tower = { version = "0.5", features = ["util"] }
tempfile = "3.10"
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "rustbridge"
path = "src/lib.rs"

[[bin]]
name = "rustbridge"
path = "src/main.rs"
